sdk_tests/tests/pbc_contract_codegen/fail/zk/secret_input_struct_not_secret.stderr
error[E0277]: the trait bound `MyTotallySecretStructTrustMe: pbc_zk_core::SecretBinary` is not satisfied
  --> tests/pbc_contract_codegen/fail/zk/secret_input_struct_not_secret.rs:27:58
   |
27 | ) -> (u64, Vec<pbc_contract_common::events::EventGroup>, pbc_contract_common::zk::ZkInputDef<u64, MyTotallySecretStructTrustMe>) {
   |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `pbc_zk_core::SecretBinary` is not implemented for `MyTotallySecretStructTrustMe`
   |
   = help: the following other types implement trait `pbc_zk_core::SecretBinary`:
             bool
             i8
             i16
             i32
             i64
             i128
             u8
             u16
           and $N others
note: required by a bound in `ZkInputDef`
  --> $WORKSPACE/pbc_contract_common/src/zk/mod.rs
   |
   | pub struct ZkInputDef<MetadataT, SecretT: SecretBinary> {
   |                                           ^^^^^^^^^^^^ required by this bound in `ZkInputDef`
